<resources>
    <string name="app_name">take365</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="title_activity_photo_player">PhotoPlayerActivity</string>
    <string name="title_activity_registration">Регистрация</string>
    <string name="you_dont_have_stories">У вас нет историй.</string>
    <string name="story_name">Story Name</string>
    <string name="my_stories">Мои истории</string>
    <string name="exit">Выход</string>
    <string name="_99">99</string>
    <string name="month">month</string>
    <string name="enter_story_name">Название истории</string>
    <string name="enter_story_description">Краткое описание истории</string>
    <string name="public_story">Публичная история</string>
    <string name="_continue">Продолжить</string>
    <string name="date_separator">,</string>
    <string name="story_progress_completed">выполнено:</string>
    <string name="_0">0</string>
    <string name="from">из</string>
    <string name="_365">365</string>
    <string name="_0_00">(0.00%)</string>
    <string name="login">логин</string>
    <string name="_1900">1900</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password">пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="Password">Пароль</string>
    <string name="_1">1</string>
    <string name="registration">регистрация</string>
    <string name="sign_in">войти</string>
    <string name="feed">Лента</string>
    <string name="empty_feed">Лента пуста.</string>
</resources>
