<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:text="@string/story_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:id="@+id/tvStoryName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_below="@+id/tvStoryName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false">

        <TextView
            android:text="@string/story_progress_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1" />

        <TextView
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCompletedFrom"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:text="@string/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:textColor="@color/colorAccent" />

        <TextView
            android:text="@string/_365"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCompletedTo"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:text="@string/_0_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCompletedPercentage"
            android:layout_weight="1"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</RelativeLayout>