<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content" android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/llTitle">

        <TextView
            android:text="@string/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMonth"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:text="@string/date_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSeparator"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/_1900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvYear"
            android:layout_weight="1"
            android:textSize="24sp"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

</RelativeLayout>